--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.sublime-project
 /tests/tests/
 /tests/results/
+/node
+/assets/themes/default/js/vue-webpack/node_modules/
