--- a/assets/themes/frontend/js/vue-webpack/package.json
+++ b/assets/themes/frontend/js/vue-webpack/package.json
@@ -10,7 +10,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "axios": "^0.18.0",
+    "vue": "^2.5.11",
+    "vue-axios": "^2.0.2"
   },
   "browserslist": [
     "> 1%",
@@ -28,6 +30,7 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
+    "vue-masonry-css": "^1.0.1",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
