--- a/assets/themes/frontend/js/vue-webpack/package.json
+++ b/assets/themes/frontend/js/vue-webpack/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "v-media-query": "^1.0.3",
     "vue": "^2.5.11",
-    "vue-axios": "^2.0.2"
+    "vue-axios": "^2.0.2",
+    "vue-mq": "^0.1.1"
   },
   "browserslist": [
     "> 1%",
